Fixed scrollbar in footer in Windows

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -592,7 +592,7 @@ footer #social span, footer #cooperation span {
     margin-top: 15px;
     float: left;
     clear: left;
-    width: 170px;
+    width: 180px;
 }
 
 footer #social a, footer #cooperation #zoo, footer #cooperation #akai {
